--- a/TipCalc.html
+++ b/TipCalc.html
@@ -62,9 +62,9 @@
         <h1>Tip Calculator</h1>
         <div>
             <label>Bill Amount</label>
-            <input name="" type="text" id="bill_amount">
+            <input name="" type="number" id="bill_amount">
             <label>Tip Percentage</label>
-            <input name="" type="text" id="tip_percentage">
+            <input name="" type="number" id="tip_percentage">
             <label>Tip Amount</label>
             <input name="" type="text" id="tip_amount" disabled>
             <label>Total Amount</label>
