--- a/TipCalc.html
+++ b/TipCalc.html
@@ -94,7 +94,7 @@
     }
         function isNumberKey(evt)
         {
-            var charCode = (evt.which) ? evt.which : evt.keyCode;
+            var charCode =evt.keyCode;
             if (charCode != 46 && charCode > 31 
             && (charCode < 48 || charCode > 57))
             return false;
